[gd_scene load_steps=5 format=3 uid="uid://4iks27a67iex"]

[ext_resource type="Script" path="res://assets/interactives/scripts/dig.gd" id="1_sooej"]

[sub_resource type="SphereShape3D" id="SphereShape3D_gjsxy"]
radius = 0.611988

[sub_resource type="SphereShape3D" id="SphereShape3D_5nfil"]
radius = 1.95772

[sub_resource type="CapsuleMesh" id="CapsuleMesh_pvjif"]

[node name="dig" type="Node3D"]
script = ExtResource("1_sooej")

[node name="dug" type="Area3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.00514279, 0)
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="dug"]
shape = SubResource("SphereShape3D_gjsxy")

[node name="detect" type="Area3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.00514279, 0)
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="detect"]
shape = SubResource("SphereShape3D_5nfil")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_pvjif")

[connection signal="body_entered" from="dug" to="." method="_on_collect_body_entered"]
[connection signal="body_exited" from="dug" to="." method="_on_collect_body_exited"]
[connection signal="body_entered" from="detect" to="." method="_on_detect_body_entered"]
[connection signal="body_exited" from="detect" to="." method="_on_detect_body_exited"]
